[package]
name = "RustySamovar"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kcp = { path = "../kcp" }
mhycrypt = { path = "../mhycrypt" }
prost = "0.8"
bytes = "1.1.0"
num-traits = "0.2"
num-derive = "0.3"

[build-dependencies]
prost-build = { version = "0.8.0" }
