[package]
name = "RustySamovar"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kcp = { path = "../kcp" }
mhycrypt = { path = "../mhycrypt" }
proto = { path = "../proto" }
packet-processor-macro = { path = "packet-processor-macro" }
packet-processor = { path = "packet-processor" }

prost = "0.8"
bytes = "1.1.0"
base64 = "0.13.0"
tokio = { version = "1", features = ["full"] }
actix-web = { version = "3", features = ["openssl"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pretty_env_logger = "0.4"
num-traits = "0.2"
num-derive = "0.3"
pretty-hex = "0.2"
sea-orm = { version = "0.3", features = [ "sqlx-all", "runtime-async-std-native-tls" ] }

[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(unix)'.dependencies]
openssl = "0.10"
