[package]
name = "packet-processor-macro"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
regex = "1"
syn = { version = "1.0", features = ["full","derive"] }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.4.0"
