[package]
name = "rs-ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = { path = "../proto" }

num-traits = "0.2"
prost = "0.8"
futures = "0.3"
zeromq = { version = "0.3", default-features = false, features = ["async-std-runtime", "all-transport"] }
